# hcdp-mcp

./: .env.example  .gitignore  .mcp.json  ANALYSIS_REPORT.md  AZURE_OPENAI_INTEGRATION.md  CLAUDE.md  EXTENT_CODES.md  INSTALL.md  NATURAL_LANGUAGE_GUIDE.md  README.md  RESTART_CLAUDE.md  WORKING_QUERIES.md  mcp_config.json  pyproject.toml  test_claude_queries.py  test_correct_extents.py  test_extent_behavior.py  test_temp_availability.py  test_working_params.py
.claude/: settings.json
.claude/agents/: hcdp-api-expert.md
examples/: claude-code-config.json  cursor-config.json  usage-examples.md  vscode-settings.json
hcdp_mcp_server/: __init__.py  __main__.py  client.py  server.py
hcdp_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hcdp_mcp_server/tools/: __init__.py  city_weather.py  compare_historical.py  constants.py  island_history.py  island_summary.py  mesonet_data.py  (+4 more)
planning/: HCDP_MCP_TOOLSET_v2.md
resources/: HCDP_CHATBOT_FINAL_TOOLSET.md  hcdp_api.yaml  hcdp_mcp_tools_additional.txt  rainfall_new_day_statewide_partial_station_data_2026_03.csv
sample_data/: README.md  sample_rainfall_2024-12-15_big_island.tiff  sample_temp_mean_2024-12-15_big_island.tiff  test_hcdp_mcp.py
tests/: __init__.py  conftest.py  test_api_compliance.py  test_client.py  test_compare.py  test_direct_api.py  test_integration.py  test_island_history.py  test_island_summary.py  test_mesonet_data.py  test_mesonet_stations.py  test_mesonet_variables.py  test_server.py  test_station_data.py  test_timeseries.py  test_v2_tools.py
